[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locotrack"
version = "1.0.0"
description = "LocoTrack: Local All-Pair Correspondence for Point Tracking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=1.10.0",
    "numpy",
    "einops",
]

[project.urls]
Homepage = "https://github.com/cvlab-kaist/locotrack"
Repository = "https://github.com/cvlab-kaist/locotrack"

[tool.setuptools]
packages = ["models"]
